--- a/public/css/app-bundle.css
+++ b/public/css/app-bundle.css
@@ -6885,5 +6885,11 @@ body *, body *::after, body *::before {
   top: 20px;
   left: 80px; }
 
+.preview__share-link {
+  display: block;
+  position: absolute;
+  top: 20px;
+  left: 200px; }
+
 /*# sourceMappingURL=app.css.map */
 /*# sourceMappingURL=app-bundle.css.map */
