--- a/public/css/app.css
+++ b/public/css/app.css
@@ -84,4 +84,10 @@ body *, body *::after, body *::before {
   top: 20px;
   left: 80px; }
 
+.preview__share-link {
+  display: block;
+  position: absolute;
+  top: 20px;
+  left: 200px; }
+
 /*# sourceMappingURL=app.css.map */
