--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -108,3 +108,10 @@ body *, body *::after, body *::before {
 	top: 20px;
 	left: 80px;
 }
+
+.preview__share-link {
+	display: block;
+	position: absolute;
+	top: 20px;
+	left: 200px;
+}
